--- a/primer-core/pom.xml
+++ b/primer-core/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>eu.dnetlib.primer</groupId>
 		<artifactId>primer</artifactId>
-		<version>1.2.0-SNAPSHOT</version>
+		<version>1.2.0</version>
 	</parent>
 	<artifactId>primer-core</artifactId>
 	<packaging>jar</packaging>
