--- a/primer-example/pom.xml
+++ b/primer-example/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>eu.dnetlib.primer</groupId>
 		<artifactId>primer</artifactId>
-		<version>1.2.0-SNAPSHOT</version>
+		<version>1.2.0</version>
 	</parent>
 	<artifactId>primer-example</artifactId>
 	<packaging>jar</packaging>
@@ -45,7 +45,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<ignore />
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
