--- a/primer-maven-plugin/pom.xml
+++ b/primer-maven-plugin/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>eu.dnetlib.primer</groupId>
 		<artifactId>primer</artifactId>
-		<version>1.2.0-SNAPSHOT</version>
+		<version>1.2.0</version>
 	</parent>
 	<artifactId>primer-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
