--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>eu.dnetlib.primer</groupId>
 	<artifactId>primer</artifactId>
-	<version>1.2.0</version>
+	<version>1.2.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
 		<module>primer-core</module>
@@ -21,7 +21,7 @@
 		<connection>scm:git:ssh://git@github.com/openaire/primer.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/openaire/primer.git</developerConnection>
 		<url>https://github.com/openaire/primer</url>
-		<tag>primer-1.2.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<pluginRepositories />
 	<properties>
